<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">sonalgaud12_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_learn_how_to_segregate">Learn how to segregate waste</string>
  <string name="msg_remember_password">Remember Password</string>
  <string name="lbl_6_4_kgs"> 6.4 kgs</string>
  <string name="msg_forget_password">Forget Password?</string>
  <string name="lbl_spend_points">Spend  points</string>
  <string name="lbl_ask_question">Ask Question</string>
  <string name="msg_start_collection">Start Collection</string>
  <string name="lbl_leaderboard">Leaderboard</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_6_ethan_l">6. Ethan L.</string>
  <string name="lbl_participation">Participation</string>
  <string name="lbl_77_3_kgs"> 77.3 kgs</string>
  <string name="lbl_create_account">Create Account</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="lbl_5_kgs">    5 kgs</string>
  <string name="lbl_collections">Collections</string>
  <string name="lbl_challenges">Challenges</string>
  <string name="msg_total_waste_saved">Total Waste Saved</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="lbl_11">11</string>
  <string name="lbl_950kg">950kg</string>
  <string name="lbl_facebook">Facebook</string>
  <string name="lbl_3_emma_f">3. Emma F.</string>
  <string name="lbl_this_week">This week</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_4_henry_c">4. Henry C.</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_23_3_kgs"> 23.3 kgs</string>
  <string name="lbl_rewards">Rewards</string>
  <string name="msg_andheri_st_road">Andheri st road, 400058 </string>
  <string name="lbl_scan">Scan</string>
  <string name="lbl_20_2_kgs"> 20.2 kgs</string>
  <string name="lbl_170_points">170 Points</string>
  <string name="lbl_email">Email</string>
  <string name="msg_waste_segregation">Waste Segregation</string>
  <string name="lbl_sophia_turner">Sophia Turner</string>
  <string name="lbl_or_sign_up_with">Or sign up with</string>
  <string name="msg_take_a_look_at_our">Take a look at our guides on how to segregate waste properly.</string>
  <string name="msg_completed_challenges">Completed Challenges</string>
  <string name="lbl_1_sarah_j">1. Sarah J.</string>
  <string name="lbl_spend">Spend</string>
  <string name="lbl_9_olivia_g">9. Olivia G.</string>
  <string name="lbl_10_william_l">10. William L.</string>
  <string name="lbl_google">Google</string>
  <string name="msg_teach_your_kids">Teach your kids about waste segregation</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_7_isabella_k">7. Isabella K.</string>
  <string name="lbl_total_points">Total Points</string>
  <string name="lbl_qr_code">QR Code</string>
  <string name="msg_that_s_at_least">That\u2019s at least 85p to spend</string>
  <string name="msg_request_collection">Request Collection</string>
  <string name="lbl_120">120</string>
  <string name="msg_fresh_juice_shop">Fresh Juice Shop</string>
  <string name="lbl_to_spend"> to spend</string>
  <string name="lbl_2_gokul_w">2. Gokul W.</string>
  <string name="lbl_welcome_back">Welcome Back</string>
  <string name="lbl_5_sophia_m">5. Sophia M.</string>
  <string name="lbl_that_s_at_least">That\u2019s at least </string>
  <string name="lbl_12_6_kgs"> 12.6 kgs</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_10_3_kgs">  10.3 kgs</string>
  <string name="lbl_85p">85p</string>
  <string name="lbl_explore">Explore</string>
  <string name="lbl_29_kgs"> 29 kgs</string>
  <string name="lbl_scan_card">Scan card</string>
  <string name="lbl_8_michael_h">8. Michael H.</string>
  <string name="lbl_28_2_kgs"> 28.2 kgs</string>
  <string name="lbl_full_name">Full Name</string>
  <string name="lbl_this_month">This Month</string>
  <string name="lbl_33_kgs"> 33 kgs</string>
</resources>
