<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeOneVM" type="com.sonalgaudsapplication.app.modules.androidlargeone.data.viewmodel.AndroidLargeOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnarrowLeftOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearRowarrowleft"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingTop="@dimen/_11pxv" style="@style/groupStylegreen_A700_02cornerRadius">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_101pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <ImageView android:id="@+id/imageArrowleftOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_316pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow_left"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_left"/>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignup"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_96pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargeOneVM.androidLargeOneModel.txtSignup}"
                style="@style/txtInterregular24" textUnderline="true" tools:text="@string/lbl_sign_up"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_89pxh"
                android:layout_marginTop="@dimen/_95pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargeOneVM.androidLargeOneModel.txtSignin}"
                style="@style/txtInterregular24" tools:text="@string/lbl_sign_in"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearAndroidlarge"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtCreateaccount"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{androidLargeOneVM.androidLargeOneModel.txtCreateaccount}"
                    style="@style/txtIntermedium28" tools:text="@string/lbl_create_account"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_green_a700_03_radius_15"
                    android:drawablePadding="@dimen/_21pxh"
                    android:drawableStart="@drawable/img_lock"
                    android:ellipsize="end"
                    android:hint="@string/lbl_full_name"
                    android:id="@+id/etFullName"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_19pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={androidLargeOneVM.androidLargeOneModel.etFullNameValue}"
                    android:textColorHint="@color/gray_600"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_green_a700_03_radius_15"
                    android:drawablePadding="@dimen/_28pxh"
                    android:drawableStart="@drawable/img_mdiemailoutline"
                    android:ellipsize="end"
                    android:hint="@string/lbl_email"
                    android:id="@+id/etEmail" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_26pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={androidLargeOneVM.androidLargeOneModel.etEmailValue}"
                    android:textColorHint="@color/gray_600"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_green_a700_03_radius_15"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etPassword"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={androidLargeOneVM.androidLargeOneModel.etPasswordValue}"
                    android:textColorHint="@color/gray_600"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_38pxh"
                    android:layout_marginStart="@dimen/_37pxh"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_login"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOrsignupwith"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{androidLargeOneVM.androidLargeOneModel.txtOrsignupwith}"
                    style="@style/txtInterregular20_1" tools:text="@string/lbl_or_sign_up_with"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearRowgoogle"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:drawablePadding="@dimen/_16pxh"
                        android:drawableStart="@drawable/img_devicongoogle"
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnGoogle"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_45pxv"
                        android:layout_width="@dimen/_149pxh"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_25pxh"
                        android:paddingStart="@dimen/_7pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_google"
                        android:textAllCaps="false"
                        style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_google"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:drawablePadding="@dimen/_8pxh"
                        android:drawableStart="@drawable/img_logosfacebook"
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnFacebook"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_45pxv"
                        android:layout_marginStart="@dimen/_13pxh"
                        android:layout_width="@dimen/_161pxh"
                        android:paddingBottom="@dimen/_10pxv"
                        android:paddingEnd="@dimen/_19pxh"
                        android:paddingStart="@dimen/_11pxh"
                        android:paddingTop="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_facebook"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_1" tools:text="@string/lbl_facebook"/>
                </LinearLayout>
                <FrameLayout android:gravity="center_horizontal"
                    android:id="@+id/frameStackdevicongoo"
                    android:layout_height="@dimen/_152pxv"
                    android:layout_marginTop="@dimen/_39pxv" android:layout_width="match_parent">
                    <ImageView android:id="@+id/imageDevicongoogle"
                        android:layout_gravity="bottom|start"
                        android:layout_height="@dimen/_128pxh"
                        android:layout_width="@dimen/_128pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_devicongoogle"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_devicongoogle"/>
                    <View
                        android:background="@drawable/rectangle_bg_green_a700_02_radius_20"
                        android:id="@+id/viewView"
                        android:layout_gravity="top|center"
                        android:layout_height="@dimen/_56pxv" android:layout_width="@dimen/_360pxh"/>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
